--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -1,6 +1,7 @@
 *{
     margin: 0;
     padding: 0;
+    font-family: 'Indie Flower', cursive;
 }
 .row {
     max-width: 1140px;
@@ -11,7 +12,7 @@
 /* =============================================== */
 #home{
     color: white;
-    margin: auto;
+    /* margin: auto; */
     background-image: linear-gradient(rgba(0, 0, 0, 0.315), rgba(0, 0, 0, 0.699)),
     url(img/space.jpg);
     background-size: cover;
@@ -22,5 +23,14 @@
 }
 #homediv {
     text-align: center;
-    margin-top: 25%;
+    margin-top: 20%;
+    font-size: 200%;
+}
+#beginbutton{
+    border: 2px solid white;
+    width: 100px;
+    margin: 2% auto;
+}
+#beginbutton:hover{
+    transform: scale(1.25);
 }
