--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -48,14 +48,14 @@
     margin-top: 2%;
     text-align: center;
 }
-#submitbutton{
+#last{
     border: 2px solid black;
     width: 100px;
     text-align:center;
     margin: auto;
     transition: transform 0.4s ease;
 }
-#submitbutton:hover{
+#last:hover{
     transform: scale(1.25);
     cursor: pointer;
 }
